kubernetes/templates/load-balancer-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-lb-backend
spec:
  type: LoadBalancer
  ports:
  - name: backend
    port: 80
    targetPort: 8080
  selector:
    webapp: gke-lb-backend
