kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
    - http:
      paths:
      - path: /
        backend:
          - serviceName: nginx-cluster-ip-service
            servicePort: 80
